Corrigindo a conexão com API e tratando exceções